# llm-planner

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SETUP.md  asound.conf  docker-compose.yml  pyproject.toml
app/: main.py
app/audio/: decomposer.py  llm_decomposer.py  recorder.py
app/system_prompts/: decomposer_system_prompt.txt
docs/: defense_slides_revised.md  deployment.md
docs/architecture/: README.md
prompts/: decomposer_system_prompt.txt
schemas/: output_cmd.py
scripts/: test_llm_decompose.py
src/audio_processor/: package.xml  setup.cfg  setup.py
src/audio_processor/audio_processor/: audio_processor_node.py  recognizer.py  recorder.py
src/camera_driver/: package.xml  setup.py
src/camera_driver/camera_driver/: camera_publisher_node.py
src/decomposer/: package.xml  setup.cfg  setup.py
src/decomposer/decomposer/: decomposer_node.py  json_utils.py  llm_client.py  sys_prompt_collector.py
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/action/: BaseAction.action
src/robot_interfaces/srv/: GripperControl.srv
src/sam3_bridge/: package.xml  setup.cfg  setup.py
src/sam3_bridge/sam3_bridge/: sam3_bridge_node.py
src/sam3_preprocessor/: package.xml  setup.cfg  setup.py
src/sam3_preprocessor/sam3_preprocessor/: preprocessor_node.py
src/ur10e_control_system/: package.xml  setup.cfg  setup.py
src/ur10e_control_system/ur10e_control_system/: cli.py  robot_interface_node.py  task_manager_node.py  ur_kinematics.py
src/ur10e_scene/: CMakeLists.txt  package.xml
src/ur10e_scene/config/: controllers.yaml
src/ur10e_scene/launch/: start_scene.launch.py
src/ur10e_scene/urdf/: realsense_d435.xacro  ur10e_anchored.urdf.xacro
src/ur10e_scene/urdf/gripper_urdf/: gripper.urdf  gripper_mujoco.xml
src/ur10e_scene/urdf/gripper_urdf/meshes/: base_old.stl  tip_old.stl
src/ur10e_scene/worlds/: station.world
