[project]
name = "llm-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.138.0",
    "openai>=2.44.0",
    "opencv-python-headless>=5.0.0.93",
    "pydantic>=2.13.4",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "uvicorn>=0.49.0",
    "vosk>=0.3.45",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
